--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <body>
     <div class="container">
         <h1>Berkay Bakaç</h1>
-        <p><strong>Final-year Computer Engineering Student</strong> | AI/ML & iOS App Developer</p>
+        <p><strong>Final-year Computer Engineering Student</strong> | AI/ML</p>
 
         <div class="section">
             <h2>About Me</h2>
-            <p>I build real-world AI and cross-platform apps. Currently focused on deploying ML models to mobile using Swift, Flutter, and FastAPI.</p>
+            <p>I build real-world AI and cross-platform apps. Currently focused on deploying ML models to mobile using Swift.</p>
         </div>
 
         <div class="section">
@@ -45,7 +45,7 @@
                 <li>Languages: Python, Swift, JavaScript, C, C++</li>
                 <li>AI/ML: TensorFlow, Keras, scikit-learn, Pandas, NLTK</li>
                 <li>Backend: Flask, FastAPI</li>
-                <li>Frontend: HTML/CSS, Streamlit</li>
+                <li>Frontend: HTML/CSS</li>
                 <li>Tools: Git, GitHub, VS Code, Jupyter Notebook</li>
             </ul>
         </div>
