--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
         a { color: #007acc; text-decoration: none; }
         a:hover { text-decoration: underline; }
         .section { margin-bottom: 2rem; }
+
+        .projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem;
+}
+.project-card {
+    background: #f0f8ff;
+    border: 1px solid #ccc;
+    padding: 1rem;
+    border-radius: 8px;
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+.project-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+}
+
     </style>
 </head>
 <body>
@@ -28,18 +46,36 @@
         <div class="section">
             <h2>Projects</h2>
             <ul>
-                <li><strong>EmotionAnalyzer</strong> – NLP tweet emotion detection with Flask</li>
-                <li><strong>Movie Recommendation System</strong> – Hybrid model with Streamlit</li>
-                <li><strong>COVID19-DataMining</strong> – Patient outcome prediction (ANN/XGBoost)</li>
-                <li><strong>MNIST Digit Classifier</strong> – CNN with TensorFlow & Keras</li>
-                <li><strong>Music Recommendation System</strong> – KMeans clustering using Spotify API</li>
-                <li><strong>To-do List App</strong> – FastAPI + SQLite task manager</li>
-                <li><strong>Line Follower Robot</strong> – Arduino-based project</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Tech Stack</h2>
+                <div class="projects-grid">
+    <div class="project-card">
+        <h3>EmotionAnalyzer</h3>
+        <p>NLP tweet emotion detection with Flask</p>
+    </div>
+    <div class="project-card">
+        <h3>Movie Recommendation System</h3>
+        <p>Hybrid model with Streamlit</p>
+    </div>
+    <div class="project-card">
+        <h3>COVID19-DataMining</h3>
+        <p>Patient outcome prediction (ANN/XGBoost)</p>
+    </div>
+    <div class="project-card">
+        <h3>MNIST Digit Classifier</h3>
+        <p>CNN with TensorFlow & Keras</p>
+    </div>
+    <div class="project-card">
+        <h3>Music Recommendation System</h3>
+        <p>KMeans clustering using Spotify API</p>
+    </div>
+    <div class="project-card">
+        <h3>To-do List App</h3>
+        <p>FastAPI + SQLite task manager</p>
+    </div>
+    <div class="project-card">
+        <h3>Line Follower Robot</h3>
+        <p>Arduino-based robot</p>
+    </div>
+</div>
             <ul>
                 <li>Languages: Python, Swift, JavaScript, C, C++</li>
                 <li>AI/ML: TensorFlow, Keras, scikit-learn, Pandas, NLTK</li>
