--- a/index.html
+++ b/index.html
@@ -1,6 +1,37 @@
 
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+  .dark-mode {
+    background-color: #0f172a;
+    color: #e2e8f0;
+  }
+
+  .dark-mode .container {
+    background-color: #1e293b;
+  }
+
+  .dark-mode .project-card {
+    background: #334155;
+    border-color: #475569;
+  }
+
+  .dark-mode a {
+    color: #93c5fd;
+  }
+
+  .theme-toggle {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    cursor: pointer;
+    font-size: 1.2rem;
+    background: none;
+    border: none;
+    color: #2563eb;
+  }
+</style>
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -100,6 +131,7 @@
     }
   </style>
 </head>
+  <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 <body>
   <div class="container">
     <h1>Berkay Bakaç</h1>
@@ -164,5 +196,10 @@
       </p>
     </div>
   </div>
+  <script>
+  function toggleTheme() {
+    document.body.classList.toggle("dark-mode");
+  }
+</script>
 </body>
 </html>
