--- a/index.html
+++ b/index.html
@@ -1,42 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <style>
-  .dark-mode {
-    background-color: #0f172a;
-    color: #e2e8f0;
-  }
-
-  .dark-mode .container {
-    background-color: #1e293b;
-  }
-
-  .dark-mode .project-card {
-    background: #334155;
-    border-color: #475569;
-  }
-
-  .dark-mode a {
-    color: #93c5fd;
-  }
-
-  .theme-toggle {
-    position: absolute;
-    top: 1rem;
-    right: 1.5rem;
-    cursor: pointer;
-    font-size: 1.2rem;
-    background: none;
-    border: none;
-    color: #2563eb;
-  }
-</style>
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Berkay Bakaç | AI & iOS Developer</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
     * {
       box-sizing: border-box;
@@ -116,6 +85,53 @@
       color: #475569;
     }
 
+    .project-card a.button {
+      display: inline-block;
+      margin-top: 0.75rem;
+      padding: 0.4rem 0.8rem;
+      background-color: #2563eb;
+      color: white;
+      font-size: 0.9rem;
+      border: none;
+      border-radius: 6px;
+      text-align: center;
+      text-decoration: none;
+      transition: background-color 0.2s ease;
+    }
+
+    .project-card a.button:hover {
+      background-color: #1e40af;
+    }
+
+    .dark-mode {
+      background-color: #0f172a;
+      color: #e2e8f0;
+    }
+
+    .dark-mode .container {
+      background-color: #1e293b;
+    }
+
+    .dark-mode .project-card {
+      background: #334155;
+      border-color: #475569;
+    }
+
+    .dark-mode a {
+      color: #93c5fd;
+    }
+
+    .theme-toggle {
+      position: absolute;
+      top: 1rem;
+      right: 1.5rem;
+      cursor: pointer;
+      font-size: 1.2rem;
+      background: none;
+      border: none;
+      color: #2563eb;
+    }
+
     ul {
       padding-left: 1rem;
     }
@@ -131,8 +147,10 @@
     }
   </style>
 </head>
-  <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+
 <body>
+  <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+
   <div class="container">
     <h1>Berkay Bakaç</h1>
     <p><strong>Final-year Computer Engineering Student</strong> | AI/ML</p>
@@ -148,30 +166,37 @@
         <div class="project-card">
           <h3>EmotionAnalyzer</h3>
           <p>NLP tweet emotion detection with Flask</p>
+          <a href="https://github.com/berkaybakac/EmotionAnalyzer" class="button" target="_blank">View Project</a>
         </div>
         <div class="project-card">
           <h3>Movie Recommendation System</h3>
           <p>Hybrid model with Streamlit</p>
+          <a href="https://github.com/berkaybakac/Movie-Recommendation-System" class="button" target="_blank">View Project</a>
         </div>
         <div class="project-card">
           <h3>COVID19-DataMining</h3>
           <p>Patient outcome prediction (ANN/XGBoost)</p>
+          <a href="https://github.com/berkaybakac/COVID19-DataMining" class="button" target="_blank">View Project</a>
         </div>
         <div class="project-card">
           <h3>MNIST Digit Classifier</h3>
           <p>CNN with TensorFlow & Keras</p>
+          <a href="https://github.com/berkaybakac/MNIST-Digit-Classifier" class="button" target="_blank">View Project</a>
         </div>
         <div class="project-card">
           <h3>Music Recommendation System</h3>
           <p>KMeans clustering using Spotify API</p>
+          <a href="https://github.com/berkaybakac/Music-Recommendation-System" class="button" target="_blank">View Project</a>
         </div>
         <div class="project-card">
           <h3>To-do List App</h3>
           <p>FastAPI + SQLite task manager</p>
+          <a href="https://github.com/berkaybakac/To-do-List-App" class="button" target="_blank">View Project</a>
         </div>
         <div class="project-card">
           <h3>Line Follower Robot</h3>
           <p>Arduino-based robot</p>
+          <a href="https://github.com/berkaybakac/Line-Follower-Robot" class="button" target="_blank">View Project</a>
         </div>
       </div>
     </div>
@@ -196,10 +221,11 @@
       </p>
     </div>
   </div>
+
   <script>
-  function toggleTheme() {
-    document.body.classList.toggle("dark-mode");
-  }
-</script>
+    function toggleTheme() {
+      document.body.classList.toggle("dark-mode");
+    }
+  </script>
 </body>
 </html>
