--- a/index.html
+++ b/index.html
@@ -122,15 +122,21 @@
     }
 
     .theme-toggle {
-      position: absolute;
-      top: 1rem;
-      right: 1.5rem;
-      cursor: pointer;
-      font-size: 1.2rem;
-      background: none;
-      border: none;
-      color: #2563eb;
-    }
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+  cursor: pointer;
+  font-size: 2rem; 
+  background: none;
+  border: none;
+  color: #0f172a; 
+  transition: color 0.2s ease;
+}
+
+.theme-toggle:hover {
+  color: #2563eb; 
+}
+
 
     ul {
       padding-left: 1rem;
