--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     }
 
     .project-card {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 220px;
       background: #f1f5f9;
       border: 1px solid #e2e8f0;
       padding: 1rem 1.25rem;
@@ -87,7 +91,7 @@
 
     .project-card a.button {
       display: inline-block;
-      margin-top: 0.75rem;
+      margin-top: auto;
       padding: 0.4rem 0.8rem;
       background-color: #2563eb;
       color: white;
