--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Berkay Bakaç | AI & iOS Developer</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
 
     body {
       transition: background-color 0.4s ease, color 0.4s ease;
@@ -15,7 +18,6 @@
       background: #f9fafb;
       color: #1f2937;
       line-height: 1.6;
-      font-size: 16px;
     }
 
     .container {
@@ -23,19 +25,32 @@
       margin: auto;
       padding: 2rem;
       background: white;
-      transition: background-color 0.4s ease;
     }
 
-    h1 { font-size: 2.5rem; color: #2563eb; margin-bottom: 0.5rem; }
-    h2 { font-size: 1.5rem; margin-top: 2rem; color: #1e3a8a; }
-    .section { margin-bottom: 2.5rem; }
+    h1 {
+      font-size: 2.5rem;
+      color: #2563eb;
+      margin-bottom: 0.5rem;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-top: 2rem;
+      color: #1e3a8a;
+    }
+
+    .section {
+      margin-bottom: 2.5rem;
+    }
 
     a {
       color: #2563eb;
       text-decoration: none;
     }
 
-    a:hover { text-decoration: underline; }
+    a:hover {
+      text-decoration: underline;
+    }
 
     .projects-grid {
       display: grid;
@@ -89,50 +104,74 @@
       transition: background-color 0.2s ease;
     }
 
-    .project-card a.button:hover { background-color: #1e40af; }
+    .project-card a.button:hover {
+      background-color: #1e40af;
+    }
 
     .dark-mode {
       background-color: #0f172a;
       color: #e2e8f0;
     }
 
-    .dark-mode .container { background-color: #1e293b; }
-    .dark-mode .project-card { background: #334155; border-color: #475569; }
-    .dark-mode a { color: #93c5fd; }
+    .dark-mode .container {
+      background-color: #1e293b;
+    }
+
+    .dark-mode .project-card {
+      background: #334155;
+      border-color: #475569;
+    }
+
+    .dark-mode a {
+      color: #93c5fd;
+    }
 
     .theme-toggle {
-      position: fixed;
-      top: 1.2rem;
-      right: 1.5rem;
-      z-index: 100;
-      font-size: 3rem;
-      cursor: pointer;
-      background: none;
-      border: none;
-      color: #0f172a;
-      transition: color 0.2s ease;
+  position: fixed;
+  top: 1.2rem;
+  right: 1.5rem;
+  z-index: 100;
+  font-size: 2.5rem;
+  cursor: pointer;
+  background: none;
+  border: none;
+  color: #0f172a; 
+  transition: color 0.2s ease;
+}
+
+.theme-toggle:hover {
+  color: #2563eb; 
+}
+
+
+    ul {
+      padding-left: 1rem;
     }
 
-    .theme-toggle:hover { color: #2563eb; }
-
-    footer {
-      text-align: center;
-      padding: 1.5rem 0;
-      color: #6b7280;
-      font-size: 0.9rem;
-      border-top: 1px solid #e5e7eb;
-      margin-top: 3rem;
+    li {
+      margin-bottom: 0.4rem;
     }
-
-    ul { padding-left: 1rem; }
-    li { margin-bottom: 0.4rem; }
 
     @media (max-width: 640px) {
-      body { font-size: 14px; }
-      .container { padding: 1rem; }
-    }
+  body {
+    font-size: 15px;
+  }
+
+  .container {
+    padding: 1rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.25rem;
+  }
+}
   </style>
 </head>
+
 <body>
   <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
@@ -143,10 +182,48 @@
     <div class="section">
       <h2>About Me</h2>
       <p>I build real-world AI and cross-platform apps. Currently focused on deploying ML models to mobile using Swift.</p>
-      <p><strong>Currently Exploring:</strong> LLMs, SwiftData, Vision APIs, and ONNX.js deployments.</p>
     </div>
 
-    <!-- Project cards and other sections remain unchanged -->
+    <div class="section">
+      <h2>Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>EmotionAnalyzer</h3>
+          <p>NLP tweet emotion detection with Flask</p>
+          <a href="https://github.com/berkaybakac/EmotionAnalyzer" class="button" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <h3>Movie Recommendation System</h3>
+          <p>Hybrid model with Streamlit</p>
+          <a href="https://github.com/berkaybakac/Movie-Recommendation-System" class="button" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <h3>COVID19-DataMining</h3>
+          <p>Patient outcome prediction (ANN/XGBoost)</p>
+          <a href="https://github.com/berkaybakac/COVID19-DataMining" class="button" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <h3>MNIST Digit Classifier</h3>
+          <p>CNN with TensorFlow & Keras</p>
+          <a href="https://github.com/berkaybakac/MNIST-Digit-Classifier" class="button" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <h3>Music Recommendation System</h3>
+          <p>KMeans clustering using Spotify API</p>
+          <a href="https://github.com/berkaybakac/Music-Recommendation-System" class="button" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <h3>To-do List App</h3>
+          <p>FastAPI + SQLite task manager</p>
+          <a href="https://github.com/berkaybakac/To-do-List-App" class="button" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <h3>Line Follower Robot</h3>
+          <p>Arduino-based robot</p>
+          <a href="https://github.com/berkaybakac/Line-Follower-Robot" class="button" target="_blank">View Project</a>
+        </div>
+      </div>
+    </div>
 
     <div class="section">
       <h2>Tech Stack</h2>
@@ -168,10 +245,10 @@
       </p>
     </div>
   </div>
-
-  <footer>
-    © 2025 Berkay Bakaç. Built with pure HTML/CSS.
-  </footer>
+  
+<footer style="text-align:center; font-size: 0.9rem; padding: 2rem 0; color: #94a3b8; border-top: 1px solid #e5e7eb; margin-top: 2rem;">
+  © 2025 Berkay Bakaç
+</footer>
 
   <script>
     function toggleTheme() {
