--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- HEAD içerisine ekle -->
+  <meta name="description" content="AI/ML ve iOS geliştirme üzerine projelerim. Berkay Bakaç kişisel portföy sitesi.">
+  <meta property="og:title" content="Berkay Bakaç | AI & iOS Developer" />
+  <meta property="og:description" content="AI ve mobil odaklı gerçek dünya projeleri" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://berkaybakac.github.io/" />
+  <meta name="twitter:card" content="summary_large_image">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Berkay Bakaç | AI & ML</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://github.com/berkaybakac.png" type="image/png">
 
   <style>
     * {
