--- a/index.html
+++ b/index.html
@@ -230,6 +230,16 @@
           <p>Arduino-based robot</p>
           <a href="https://github.com/berkaybakac/Line-Follower-Robot" class="button" target="_blank">View Project</a>
         </div>
+        <div class="project-card">
+          <h3>PistachioDelights</h3>
+          <p>Antep tatlıları temalı web uygulaması</p>
+          <a href="https://github.com/berkaybakac/PistachioDelights" class="button" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <h3>FaceRecognitionCNN</h3>
+          <p>Yüz ifadelerini sınıflandıran CNN projesi</p>
+          <a href="https://github.com/berkaybakac/FaceRecognitionCNN" class="button" target="_blank">View Project</a>
+       </div>
       </div>
     </div>
 
