--- a/index.html
+++ b/index.html
@@ -234,6 +234,12 @@
     </div>
 
     <div class="project-card">
+      <h3>🔍 Handwriting Text Recognition</h3>
+      <p>OCR pipeline with OpenCV & Tesseract for handwritten Turkish and English text</p>
+      <a href="https://github.com/berkaybakac/handwriting-text-recognition" class="button" target="_blank">View Project</a>
+   </div>
+        
+    <div class="project-card">
       <h3>🧰 To-do List App</h3>
       <p>FastAPI + SQLite-based personal task manager</p>
       <a href="https://github.com/berkaybakac/To-do-list" class="button" target="_blank">View Project</a>
