--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
   <h2>Tech Stack</h2>
   <ul>
     <li><strong>Languages:</strong> Python, JavaScript, C, C++, C#</li>
-    <li><strong>AI/ML:</strong> TensorFlow, Keras, scikit-learn, Pandas, NLTK</li>
+    <li><strong>AI/ML:</strong> TensorFlow, Keras, scikit-learn, Pandas, NLTK, OpenCV</li>
     <li><strong>Frameworks:</strong> Flask, FastAPI, ASP.NET Core MVC, Entity Framework Core</li>
     <li><strong>Frontend:</strong> HTML/CSS, basic JS, Bootstrap</li>
     <li><strong>DevOps:</strong> GitHub Actions, CI/CD Pipelines</li>
