--- a/index.html
+++ b/index.html
@@ -160,10 +160,14 @@
       margin-bottom: 0.4rem;
     }
 
+
     @media (max-width: 640px) {
-  body {
-    font-size: 15px;
+  .theme-toggle {
+    font-size: 1.8rem;
+    top: 1rem;
+    right: 1rem;
   }
+}
 
   .container {
     padding: 1rem;
