--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 
     @media (max-width: 640px) {
   .theme-toggle {
-    font-size: 1.8rem;
-    top: 1rem;
-    right: 1rem;
+    top: 0.5rem;
+    right: 0.8rem;
+    font-size: 2rem; /* Daha küçük boyut */
   }
 }
 
