--- a/index.html
+++ b/index.html
@@ -147,11 +147,6 @@
   transition: color 0.2s ease;
 }
 
-.theme-toggle:hover {
-  color: #2563eb; 
-}
-
-
     ul {
       padding-left: 1rem;
     }
@@ -160,15 +155,13 @@
       margin-bottom: 0.4rem;
     }
 
-
-    @media (max-width: 640px) {
+@media (max-width: 640px) {
   .theme-toggle {
-    top: 0.5rem;
-    right: 0.8rem;
-    font-size: 2rem; /* Daha küçük boyut */
+    top: 0.3rem;        
+    right: 1rem;        
+    font-size: 1.8rem; 
   }
 }
-
   .container {
     padding: 1rem;
   }
