--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
   transition: color 0.2s ease;
 }
 
+.theme-toggle:hover {
+  color: #2563eb; 
+}
+
+
     ul {
       padding-left: 1rem;
     }
@@ -155,13 +160,11 @@
       margin-bottom: 0.4rem;
     }
 
-@media (max-width: 640px) {
-  .theme-toggle {
-    top: 0.3rem;        
-    right: 1rem;        
-    font-size: 1.8rem; 
+    @media (max-width: 640px) {
+  body {
+    font-size: 15px;
   }
-}
+
   .container {
     padding: 1rem;
   }
