--- a/index.html
+++ b/index.html
@@ -161,10 +161,14 @@
     }
 
     @media (max-width: 640px) {
-  body {
-    font-size: 15px;
+  .theme-toggle {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.8rem;
   }
-
+}
+    
   .container {
     padding: 1rem;
   }
