--- a/index.html
+++ b/index.html
@@ -202,92 +202,92 @@
         
             <!-- AI/ML Projects -->
     <div class="project-card">
-      <h3>🧐 EmotionAnalyzer</h3>
+      <h3>EmotionAnalyzer</h3>
       <p>NLP tweet emotion detection with Flask web UI</p>
       <a href="https://github.com/berkaybakac/EmotionAnalyzer" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>📊 COVID19-DataMining</h3>
+      <h3>COVID19-DataMining</h3>
       <p>ML-based patient outcome prediction (ANN, XGBoost)</p>
       <a href="https://github.com/berkaybakac/COVID19-DataMining" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>🔢 MNIST Digit Classifier</h3>
+      <h3>MNIST Digit Classifier</h3>
       <p>CNN with TensorFlow & Keras</p>
       <a href="https://github.com/berkaybakac/MNIST-Digit-Classifier" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>🎵 Music Recommendation System</h3>
+      <h3>Music Recommendation System</h3>
       <p>Spotify API + KMeans for music clustering</p>
       <a href="https://github.com/berkaybakac/Music-Recommend-System" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-        <h3>🎥 Movie Recommendation System</h3>
+        <h3>Movie Recommendation System</h3>
         <p>Hybrid recommender with Streamlit interface</p>
         <a href="https://github.com/berkaybakac/Movie-Recommendation-System" class="button">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>🫠 FaceRecognitionCNN</h3>
+      <h3>FaceRecognitionCNN</h3>
       <p>Facial expression classification with CNN (Jupyter)</p>
       <a href="https://github.com/berkaybakac/FaceRecognitionCNN" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>🔍 Handwriting Text Recognition</h3>
+      <h3>Handwriting Text Recognition</h3>
       <p>OCR pipeline with OpenCV & Tesseract for handwritten Turkish and English text</p>
       <a href="https://github.com/berkaybakac/handwriting-text-recognition" class="button" target="_blank">View Project</a>
    </div>
         
     <div class="project-card">
-      <h3>🧰 To-do List App</h3>
+      <h3>To-do List App</h3>
       <p>FastAPI + SQLite-based personal task manager</p>
       <a href="https://github.com/berkaybakac/To-do-list" class="button" target="_blank">View Project</a>
     </div>
 
     <!-- Web & System Projects -->
     <div class="project-card">
-      <h3>🍰 PistachioDelights</h3>
+      <h3>PistachioDelights</h3>
       <p>Flask-based Turkish dessert e-commerce demo</p>
       <a href="https://github.com/berkaybakac/PistachioDelights" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>📦 Product Tracking System</h3>
+      <h3>Product Tracking System</h3>
       <p>ASP.NET Core MVC + EF Core product tracking system</p>
       <a href="https://github.com/berkaybakac/ProductTrackingSystem4" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>📖 IrisReadingApp</h3>
+      <h3>IrisReadingApp</h3>
       <p>ASP.NET Core MVC app displaying Iris dataset</p>
       <a href="https://github.com/berkaybakac/Json-Read1" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>🎶 Album Management System</h3>
+      <h3>Album Management System</h3>
       <p>Manage albums with manager info via ASP.NET MVC</p>
       <a href="https://github.com/berkaybakac/album-management-system3" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>🎓 Student Management System</h3>
+      <h3>Student Management System</h3>
       <p>CRUD operations for students with ASP.NET MVC</p>
       <a href="https://github.com/berkaybakac/Student-management2" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>🛶 Line Follower Robot</h3>
+      <h3>Line Follower Robot</h3>
       <p>Arduino-based IR sensor line following robot</p>
       <a href="https://github.com/berkaybakac/LineFollowerRobot" class="button" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <h3>✅ CI/CD Demo</h3>
+      <h3>CI/CD Demo</h3>
       <p>GitHub Actions-based CI/CD pipeline with pytest</p>
       <a href="https://github.com/berkaybakac/cicd-demo" class="button" target="_blank">View Project</a>
     </div>  
